style.css
body{
    margin: 0;
    padding: 0;
    overflow-x: hidden;
    width: 100%;
}
.landingPage{
    display: grid;
    min-height: 100vh;
    height: 100vh;
}
.landingPage .welcomeText{
    background-color: rgba(28, 28, 132, 0.8);
    color: #edf5fc;
    font-family: "Times New Roman";
    font-size: 1.25rem;
    width: 20%;
    padding-left: 2%;
    padding-right: 2%;
    position: relative;
    right: 20px;
    min-height: 100vh;
    height: auto;
    z-index: 2;
    grid-row: 1;
    grid-column: 1;
}
.landingPage .background{
    position: relative;
    width: 100%;
    min-height: 100vh;
    height: 100vh;
    z-index: 1;
    grid-row: 1;
    grid-column: 1;
    display: block;
}

.aboutMe{
    text-align: center;
}
.aboutMeText{
    font-size: clamp(0.5rem, 2vw + 0.5rem, 1.25rem);
    padding-left: 17.5%;
    padding-right: 17.5%;
}
.achievements{
    text-align: left;
    margin-left: 15%;
    font-size: 18px;
    padding-right: 20%;
}

@media (max-width: 1000px){
    .landingPage{
        display: grid;
        height: 50vh;
        max-height: 50vh;
        gap: 0;
        grid-auto-rows: min-content;
        min-height: 0;
        margin-top: 10%;
    }
    .landingPage .welcomeText{
        background-color: rgba(28, 28, 132, 0.8);
        grid-column: 1;
        grid-row: 1;
        z-index: 2;
        color: #edf5fc;
        font-family: "Times New Roman";
        font-size: 20px;
        position: relative;
        width: 30%;
        padding-top: 5%;
        padding-left: 3%;
        padding-right: 3%;
        box-sizing: border-box;
        min-height: 50vh;
        height: auto;
    }
    .landingPage .background{
       position: relative;
        width: 100%;
        z-index: 1;
        grid-row: 1;
        grid-column: 1;
        min-height: 50vh;
        height: 50ch;
        object-fit: cover;
    }
}
/* Landing page really struggles to work on mobile, so i think I get a new image, pit it as width100% no grid, and then put a
transparent black text box over it, with the upper margin being the same percent as navBar height. */

.navbar{
    background-color: #272d2d;
    overflow: hidden;
    width: 101.2%;
    height: 7.5%;
    position: fixed;
    z-index: 100;
    margin-top: 5px;
    margin-left: 5px;
    left: -10px;
    top: -10px;
}
.navbar a{
    float: left;
    color: #edf5fc;
    text-align: center;
    padding-left: 16px;
    padding-right: 16px;
    text-decoration: none;
    font-size: 20px;
    height: 100%;
    display: flex;
    place-items: center;
}
.navbar a.active{
    background-color: #1c1c84;
    color: #edf5fc;
}
.navbar a:hover{
    background-color: #1c1c70;
}

.footer{
    align-items: bottom;
    overflow: hidden;
    width: 101.2%;
    position: relative;
    left: -10px;
    top: -10px;
}
.footer table{
    width: 100%;
    table-layout: fixed;
    text-align: center;
    font-size: clamp(0.5rem, 2vw + 0.5rem, 1.2rem)
}

@media (max-width: 1000px){
    .footer table, td{
        display: block;
    }
    .footer td{
        text-align: center;
        align-items: center;
    }
    .footer{
        align-items: center;
        text-align: center;
    }
}

.titleLine{
    width: 30%;
}

.bottomLine{
    width: 50%;
}


/* WEB PROJECTS CSS */
.revisionSite{
    text-align: center;
    font-size: 16px;
}

.saveCyber{
    text-align: center;
    font-size: 16px;
}

.saveCyberIntro{
    margin-left: 2.5%;
    margin-right: 2.5%;
    font-size: clamp(0.5rem, 2vw + 0.5rem, 1.25rem)
}

.saveCyberPage{
    display: grid;
    grid-template-columns: 6fr 3.5fr 0.5fr;
    gap: 1rem;
    font-size: clamp(0.5rem, 2vw + 0.5rem, 1.25rem);
}
.saveCyberPage .saveCyberPageText{
    text-align: left;
    margin-left: 5%;
    grid-column: 1;
    border-top: 2px solid;
    border-bottom: 2px solid;
    border-image: linear-gradient(to right, transparent 20%, blue 20%, blue 80%, transparent 80%) 1;
}
.saveCyberPage .saveCyberPageImage{
    width: 100%;
    grid-column: 2;
}

.saveCyberCode{
    display: grid;
    grid-template-columns: 0.25fr 3.5fr 6fr 0.5fr;
    font-size: clamp(0.5rem, 2vw + 0.5rem, 1.25rem);
}
.saveCyberCodeImages{
    display: flex;
    flex-direction: column;
    gap: 0;
    grid-column: 2;
}
.saveCyberCodeImages .saveCyberCodeImage1{
    border: 1px solid black;
    width: 100%;
    height: auto;
}
.saveCyberCodeImages .saveCyberCodeImage2{
    border: 1px solid black;
    border-top: none;
    width: 100%;
    height: auto;
}
.saveCyberCodeText{
    text-align: left;
    grid-column: 3;
    margin-top: -2.5%;
    margin-left: 5%;
    display: flex;
    flex-direction: column;
}

/* landingPageImage */
.landingPageImage{
    display: grid;
    grid-template-columns: 6fr 3.5fr 0.5fr;
    gap: 1rem;
}
.landingPageImage .landingPageImageText{
    text-align: left;
    font-size: clamp(0.5rem, 2vw + 0.5rem, 1.25rem);
    margin-left: 5%;
    grid-column: 1
}
.landingPageImage .revisionImage1{
    width: 100%;
    grid-column: 2
}

/* navBarImage */
.navBarImage{
    display: grid;
    grid-template-columns: 0.25fr 3.5fr 6fr 0.5fr;
    gap: 1rem;
}
.navBarImage .revisionImage2{
    width: 100%;
    grid-column: 2;
}
.navBarImage .navBarImageText{
    font-size: clamp(0.5rem, 2vw + 0.5rem, 1.25rem);
    text-align: left;
    grid-column: 3;
}

/* Portfolio Website */
.portfolioWebsite{
    font-size: clamp(0.5rem, 2vw + 0.5rem, 1.25rem);
    text-align: center;
}

.portfolioText{
    margin-left: 5%;
    margin-right: 5%;
}
.portfolioSaveCyberCSS{
    display: grid;
    grid-template-columns: 6fr 3.5fr 0.5fr;
    gap: 1rem;
}
.portfolioSaveCyberCSS .portfolioSaveCyberCSSText{
    grid-column: 1;
    margin-left: 7.5%; 
    text-align: left;   
}
.portfolioSaveCyberCSS .portfolioSaveCyberCSSImg{
    grid-column: 2;
    width: 100%;
}

.portfolioMobileCSS{
    display: grid;
    grid-template-columns: 0.25fr 2.5fr 7fr 0.5fr;
    gap: 1rem;
}
.portfolioMobileCSS .portfolioMobileCSSImg{
    grid-column: 2;
    width: 100%;
}
.portfolioMobileCSS .portfolioMobileCSSText{
    grid-column: 3;
    text-align: left;
    border-top: 2px solid;
    border-bottom: 2px solid;
    border-image: linear-gradient(to right, transparent 20%, blue 20%, blue 80%, transparent 80%) 1;
}

.portfolioHTML{
    display: grid;
    grid-template-columns: 0.25fr 3.5fr 6fr 0.5fr;
    gap: 1rem;
}
.portfolioHTML .portfolioHTMLImg{
    grid-column: 2;
    width: 100%;
}
.portfolioHTML .portfolioHTMLText{
    grid-column: 3;
    text-align: left;
}

@media (max-width: 1000px){
    .saveCyberPage,
    .saveCyberCode,
    .landingPageImage,
    .navBarImage,
    .portfolioSaveCyberCSS,
    .portfolioMobileCSS,
    .portfolioHTML{
        display: flex;
        flex-direction: column;
        margin-left: 5%;
        margin-right: 5%;
    }
}




/* OTHER PROJECTS PAGE */
.afterlives{
    text-align: center;
    font-size: 16px;
}

.afterlivesIntro{
    margin-left: 2.5%;
    margin-right: 2.5%;
    font-size: clamp(0.5rem, 2vw + 0.5rem, 1.25rem);
}

.afterlivesSettings{
    display: grid;
    grid-template-columns: 0.25fr 2.75fr 2.75fr 4fr 0.25fr;
    gap: 1rem;
}
.afterlivesSettings .afterlivesSettingsCodeImg{
    width: 100%;
    grid-column: 2;
}
.afterlivesSettings .afterlivesSettingsImg{
    width: 100%;
    grid-column: 3;
}
.afterlivesSettings .afterLivesSettingsText{
    font-size: clamp(0.5rem, 2vw + 0.5rem, 1.25rem);
    grid-column: 4;
}

.afterlivesEnemy{
    display: grid;
    grid-template-columns: 6fr 3.5fr 0.5fr;
    gap: 1rem;
}
.afterlivesEnemy .afterlivesEnemyText{
    font-size: clamp(0.5rem, 2vw + 0.5rem, 1.25rem);
    grid-column: 1;
    border-bottom: 2px solid;
    border-top: 2px solid;
    border-image: linear-gradient(to right, transparent 20%, blue 20%, blue 80%, transparent 80%) 1;
    margin-left: 5%;
    margin-right: 5%;
}
.afterlivesEnemy .afterlivesEnemyCodeImg{
    width: 100%;
    grid-column: 2;
}

.afterlivesGameplay{
    display: grid;
    grid-template-columns: 0.25fr 4fr 6fr 0.5fr;
    gap: 1rem;
}
.afterlivesGameplay .afterlivesGameplayImg{
    width: 100%;
    grid-column: 2;
}
.afterlivesGameplay .afterlivesGameplayText{
    font-size: clamp(0.5rem, 2vw + 0.5rem, 1.25rem);
    grid-column: 3;
    text-align: left;
    margin-left: 5%;
}

.blockBust{
    text-align: center;
    font-size: 16px;
}
.blockBustTitle{
    display: grid;
    grid-template-columns: 6.5fr 3fr 0.5fr;
    gap: 1rem;
}
.blockBustTitle .blockBustTitleText{
    font-size: clamp(0.5rem, 2vw + 0.5rem, 1.25rem);
    grid-column: 1;
    text-align: left;
    margin-left: 5%;
}
.blockBustTitle .blockBustTitleImg{
    width: 100%;
    grid-column: 2;
}

.blockBustCode{
    display: grid;
    grid-template-columns: 1fr 3fr 1fr 3fr 1fr;
    gap: none;
}
.blockBustCode .blockBustCodeImg1{
    width: 100%;
    grid-column: 2;
}
.blockBustCode .blockBustCodeImg2{
    width: 100%;
    grid-column: 4;
}

.blockBustCodeText{
    font-size: clamp(0.5rem, 2vw + 0.5rem, 1.25rem);
    margin-left: 5%;
    margin-right: 5%;
}

.blockBustGameplay{
    display: grid;
    grid-template-columns: 0.25fr 3.5fr 6fr 0.5fr;
    gap: 1rem;
}
.blockBustGameplay .blockBustGameplayImg{
    width: 100%;
    grid-column: 2;
}
.blockBustGameplay .blockBustGameplayText{
    font-size: clamp(0.5rem, 2vw + 0.5rem, 1.25rem);
    grid-column: 3;
    text-align: left;
}

.ticTacToe{
    font-size: 16px;
    text-align: center;
}

.ticTacToeText{
    font-size: clamp(0.5rem, 2vw + 0.5rem, 1.25rem);
    text-align: center;
    margin-left: 5%;
    margin-right: 5%;
}

.ticTacToeGameplay{
    display: grid;
    grid-template-columns: 0.25fr 3fr 6.5fr 0.5fr;
    gap: 1rem;
}
.ticTacToeGameplay .ticTacToeGameplayImg{
    width: 100%;
    grid-column: 2;
}
.ticTacToeGameplay .ticTacToeGameplayText{
    font-size: clamp(0.5rem, 2vw + 0.5rem, 1.25rem);
    grid-column: 3;
    border-top: 2px solid;
    border-bottom: 2px solid;
    border-image: linear-gradient(to right, transparent 20%, blue 20%, blue 80%, transparent 80%) 1;
    text-align: left;
}

.ticTacToeCode{
    display: grid;
    grid-template-columns: 6.5fr 3.5fr 0.5fr;
}
.ticTacToeCodeImages{
    display: flex;
    flex-direction: column;
    gap: 0;
    grid-column: 2;
}
.ticTacToeCodeImages .ticTacToeCodeImg1{
    width: 100%;
    height: auto;
    border: 2px solid blue;
}
.ticTacToeCodeImages .ticTacToeCodeImg2{
    width: 100%;
    height: auto;
    border: 2px solid blue;
    border-top: none;
}
.ticTacToeCode .ticTacToeCodeText{
    font-size: clamp(0.5rem, 2vw + 0.5rem, 1.25rem);
    text-align: left;
    grid-column: 1;
    display: flex;
    flex-direction: column;
    margin-left: 5%;
    margin-right: 5%;
}
@media (max-width: 1000px){
    .afterlivesSettings,
    .afterlivesEnemy,
    .afterlivesGameplay,
    .blockBustTitle,
    .blockBustGameplay,
    .blockBustCode,
    .ticTacToeGameplay,
    .ticTacToeCode{
        display: flex;
        flex-direction: column;
        margin-left: 5%;
        margin-right: 5%;
    }
}

